--- a/CityApp/packages.config
+++ b/CityApp/packages.config
@@ -4,8 +4,12 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid71" />
+  <package id="Naxam.SeatGeek.PlacesAutocompleteTextView" version="0.2.2017.2" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Plugin.Permissions" version="2.0.1" targetFramework="monoandroid71" />
+  <package id="sameerIOTApps.Plugin.SecureStorage" version="1.2.2" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -53,4 +57,19 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Geolocator" version="4.0.1" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.3.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Base" version="42.1001.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="42.1001.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="42.1001.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Places" version="42.1001.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1001.0" targetFramework="monoandroid71" />
 </packages>
